# aci-docker-haskell-template

./: .devcontainer.json  .gitignore  CHANGELOG.md  LICENSE  cabal.project  compose.yaml  hls-issues-aci-docker-haskell.cabal  readme.org
app/: Main.hs
containers/devcontainer/: Dockerfile
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: MyLib.hs
tools/: initialize.sh  on-create.sh
