cabal-version:      3.0
name:               hls-issues-aci-docker-haskell
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             codygman
maintainer:         cody.goodman@acilearning.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable hls-issues-aci-docker-haskell
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    ghc-options: -fplugin=Evoke -fplugin-opt=Evoke:--verbose
    build-depends:
        base ^>=4.16.1.0,
        aeson,
        evoke,
        hls-issues-aci-docker-haskell,
        persistent

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hls-issues-aci-docker-haskell-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.1.0,
        hls-issues-aci-docker-haskell